# today

./: .gitignore  AGENTS.md  LESSONS.md  README.md  flake.nix  pyproject.toml
tasks/20260720-142158/: TASK.md
tasks/20260720-142159/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-142200/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-142201/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-142202/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-142203/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-142204/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-142205/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-171855/: RETRO.md  REVIEW.md  TASK.md
tasks/20260720-172833/: RETRO.md  REVIEW.md  TASK.md
tests/: test_cli.py  test_edit.py  test_model.py
tests/fixtures/: 2026-01-02-Friday.json  2026-01-02-Friday.md  2026-02-10-Tuesday.json  2026-02-10-Tuesday.md  2026-07-18-Saturday.json  2026-07-18-Saturday.md  2026-07-19-Sunday.json  2026-07-19-Sunday.md  2026-07-20-Monday.json  2026-07-20-Monday.md
today/: __init__.py  __main__.py  cli.py  edit.py  model.py
