[project]
name = "today"
version = "0.1.0"
description = "the-den journal CLI - one command that merges today + daily"
readme = "README.md"
authors = [
    { name = "Alex Jercan", email = "jercan_alex27@yahoo.com" }
]
requires-python = ">=3.13"
# Stdlib only: the journal is plain markdown, so the CLI has no runtime deps.
dependencies = []

[project.scripts]
today = "today.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["today"]
only-include = ["today"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
mypy_path = "."

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "Q"]
ignore = []
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.14.1",
]
